[package]
name = "layline"
version = "0.2.1"
authors = ["Anthony Roberts <acrobert@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
clap = "3.0.0-beta.2"
flexi_logger = "0.15"
hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "stream", "tcp"] }
log = "0.4"
rand = "0.8"
rand_core = "0.6"
regex = "1.5"
reqwest = "0.11"
tokio = { version = "1.6", features = ["rt-multi-thread", "net", "signal", "io-std", "macros"] }
