[package]
name = "layline"
version = "0.2.3"
authors = ["Anthony Roberts <acrobert@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
clap = "3.1"
flexi_logger = "0.24"
hyper = { version = "0.14", features = ["server"] }
log = "0.4"
rand = "0.8"
rand_core = "0.6"
regex = "1.5"
reqwest = "0.11"
tokio = { version = "1.24", features = ["rt-multi-thread", "signal", "io-std", "macros"] }
