[package]
name = "layline"
version = "0.2.3"
authors = ["Anthony Roberts <acrobert@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
clap = "3.1"
flexi_logger = "0.24"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.2", features = ["server"] }
log = "0.4"
rand = "0.8"
rand_core = "0.6"
regex = "1.5"
reqwest = "0.11"
tokio = { version = "1.24", features = ["rt-multi-thread", "signal", "io-std", "macros"] }
